--- a/index.html
+++ b/index.html
@@ -46,6 +46,11 @@
             </section>
 
             <section>
+                <h2>Homework Review</h2>
+                Gather in small groups and show Homework #3.
+            </section>
+
+            <section>
                 <h2>2nd to Last Class</h2>
                 Your game is due Wednesday. Office hours Tomorrow.
             </section>
